--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>Frontend Mentor | NFT preview card component</title>
   </head>
   <body>
-    <div class="center">
+    <main>
       <section class="card-container">
         <article class="card">
           <figure class="card-image">
@@ -24,6 +24,18 @@
               src="/images/image-equilibrium.jpg"
               alt="Cube representing balance and calm"
             />
+            <div class="card-image-overlay">
+              <svg width="48" height="48" xmlns="http://www.w3.org/2000/svg">
+                <g fill="none" fill-rule="evenodd">
+                  <path d="M0 0h48v48H0z" />
+                  <path
+                    d="M24 9C14 9 5.46 15.22 2 24c3.46 8.78 12 15 22 15 10.01 0 18.54-6.22 22-15-3.46-8.78-11.99-15-22-15Zm0 25c-5.52 0-10-4.48-10-10s4.48-10 10-10 10 4.48 10 10-4.48 10-10 10Zm0-16c-3.31 0-6 2.69-6 6s2.69 6 6 6 6-2.69 6-6-2.69-6-6-6Z"
+                    fill="#FFF"
+                    fill-rule="nonzero"
+                  />
+                </g>
+              </svg>
+            </div>
           </figure>
           <section class="card-details">
             <a href="#" class="card-title">Equilibrium #3429</a>
@@ -59,13 +71,14 @@
           </section>
         </article>
       </section>
-    </div>
-
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">KMLweb983</a>.
-    </div>
+    </main>
+    <footer>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">KMLweb983</a>.
+      </div>
+    </footer>
   </body>
 </html>
